Cards Z-Index Fixed

--- a/src/cards/HeroCard/HeroCard.module.css
+++ b/src/cards/HeroCard/HeroCard.module.css
@@ -21,7 +21,7 @@
     left: 0;
     border-radius: 0.57vw;
     background-image: linear-gradient(transparent, #222222dd);
-    z-index: 5;
+    z-index: 2;
     display: flex;
     opacity: 0;
     justify-content: space-between;
